add new data to model
